# koreanize-matplotlib

./: README.md  pyproject.toml
koreanize_matplotlib/: koreanize_matplotlib.py
tests/: test_koreanize.py
